force-app/main/default/objects/sked__Templated_Shift_Tag__c/sked__Templated_Shift_Tag__c.object-meta.xml
<CustomObject>
    <label>Templated Shift Tag</label>
    <nameField>
        <displayFormat>TST-{0000}</displayFormat>
        <label>Templated Shift Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Shift Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>