force-app/main/default/objects/sked__Templated_Shift_Tag__c/fields/sked__Tag__c.field-meta.xml
<CustomField>
    <fullName>sked__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>sked__Tag__c</referenceTo>
    <relationshipLabel>Templated Shift Tags</relationshipLabel>
    <relationshipName>Templated_Shift_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>