force-app/main/default/objects/sked__Templated_Shift_Tag__c/fields/sked__Templated_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked__Templated_Shift__c</fullName>
    <label>Templated Shift</label>
    <referenceTo>sked__Templated_Shift__c</referenceTo>
    <relationshipLabel>Templated Shift Tags</relationshipLabel>
    <relationshipName>Templated_Shift_Tags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>