force-app/main/default/objects/sked__Templated_Shift_Tag__c/validationRules/sked__RequiredOrWeighting.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__RequiredOrWeighting</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND( sked__Required__c  = true, NOT( ISNULL( sked__Weighting__c ) ) ) , AND( sked__Required__c  = false, ISNULL( sked__Weighting__c ) ) )</errorConditionFormula>
    <errorMessage>Either Required or Weighting attributes must be present, but not both of them.</errorMessage>
</ValidationRule>